--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,11 +36,11 @@
         }
 
         &--green {
-            background-color: $color-primary;
+            background-color: $color-primary-dark;
             color: $color-white;
     
             &::after{
-                background-color: $color-primary;
+                background-color: $color-primary-dark;
             }
         }
     
